--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["dist/**"]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/main.js"
+      "src": "src/main.ts",
+      "use": "@vercel/nest"
     }
   ]
 }
